Fixed safari z-index bug

--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@ a {
 .background-container {
     position: absolute;
     top: 0;
-    left:0;
+    left: 0;
     bottom: 0;
     right: 0;
     z-index: -12;
@@ -126,18 +126,22 @@ a {
 @keyframes move-background {
     from {
         -webkit-transform: translateX(0px);
+        z-index: -8;
     }
     to { 
         -webkit-transform:  translateX(100vw);
+        z-index: -8;
     }
 }
 
 @-webkit-keyframes move-background {
     from {
         -webkit-transform: translateX(0px);
+        z-index: -8;
     }
     to { 
         -webkit-transform:  translateX(100vw);
+        z-index: -8;
     }
 }
 
